--- a/dev/scss/core/_side_panel.scss
+++ b/dev/scss/core/_side_panel.scss
@@ -27,6 +27,7 @@
       border-top: 1px solid $white;
       border-bottom: 1px solid $grey;
       border-radius: 0;
+      margin: 0 auto;
 
       &.ui-state-focus {
         width: 100%;
